# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,12 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import profileRouter from "./profile";
+import calculationsRouter from "./calculations";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(profileRouter);
+router.use(calculationsRouter);
 
 export default router;
